--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-
+<meta name="baidu-site-verification" content="NOKMDDwSva" />
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <link href="http://anqingli.com/main.css" rel="stylesheet" type="text/css">
 <link rel="alternate" type="application/atom+xml" href="/atom.xml" title="Atom feed">
