--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<meta name="baidu-site-verification" content="NOKMDDwSva" />
+
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <link href="http://anqingli.com/main.css" rel="stylesheet" type="text/css">
 <link rel="alternate" type="application/atom+xml" href="/atom.xml" title="Atom feed">
-<link rel="shortcut icon" href="http://anqingli.com/images/Yc.jpg">
+<link rel="shortcut icon" href="http://anqingli.com/images/AL.jpg">
 
 <title>{{ page.title }}</title>
 
