--- a/main.css
+++ b/main.css
@@ -79,9 +79,9 @@ code {
 a {
     text-decoration: none;
     cursor: crosshair;
-    /*border-bottom: 1px dashed Red;*/
+    border-bottom: 1px dashed Blue;
     padding: 1px;
-    color: black;
+    color: Red;
 }
 
 
